--- a/FishMonitoring/FishMonitoring.csproj
+++ b/FishMonitoring/FishMonitoring.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FishLibrary\FishLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
