--- a/FishMonitoring/FishMonitoring.csproj
+++ b/FishMonitoring/FishMonitoring.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FishLibrary\FishLibrary.csproj" />
+    <ProjectReference Include="..\ParsingLibrary\ParsingLibrary.csproj" />
   </ItemGroup>
 
 </Project>
